# perf-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: extract_options.py
src/perf_mcp/: executor.py  schema.py  server.py
src/perf_mcp/tools/: annotate.py  buildid.py  c2c.py  data.py  diff.py  evlist.py  inject.py  kallsyms.py  kmem.py  kvm.py  kwork.py  lock.py  mem.py  report.py  sched.py  script.py  timechart.py
tests/: conftest.py  test_executor.py  test_schema.py  test_tools.py
tests/fixtures/: test.perf.data
