[project]
name = "perf-mcp"
version = "0.1.0"
description = "MCP server exposing Linux perf analysis tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.2",
]

[project.scripts]
perf-mcp = "perf_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perf_mcp"]
